syntax = "proto3";

package vcassist.services.gradesnapshots.v1;

// Push
message PushRequest {
  string user = 1;
  int64 time = 2;

  message Course {
    string course = 1;
    float value = 2;
  }
  repeated Course courses = 3;
}
message PushResponse {}

// Pull
message PullRequest {
  string user = 1;
}
message PullResponse {
  message Course {
    string course = 1;
    message Snapshot {
      int64 time = 1;
      float value = 2;
    }
    repeated Snapshot snapshots = 2;
  }
  repeated Course courses = 1;
}

service GradeSnapshotsService {
  rpc Push(PushRequest) returns (PushResponse);
  rpc Pull(PullRequest) returns (PullResponse);
}
